Update text and fix spacing

--- a/modules/dashboard/css/dashboard.css
+++ b/modules/dashboard/css/dashboard.css
@@ -114,7 +114,6 @@
     font-size: 40px;
     text-align: left;
     margin-left: 100px;
-    margin-bottom: 50px;
 }
 .overlay span {
     color: red;
